--- a/pages/mine/suppages/order-list/subpages/order-detail/index.wxss
+++ b/pages/mine/suppages/order-list/subpages/order-detail/index.wxss
@@ -1,15 +1,15 @@
-.content {
-  padding: 24rpx 24rpx ;
-  padding-bottom: calc(100rpx + env(safe-area-inset-bottom));
+.container {
+  padding: 24rpx 24rpx calc(100rpx + env(safe-area-inset-bottom));
 }
 
-.info-wrap {
+.card {
   padding: 24rpx;
-  background-color: #fff;
+  background: #fff;
   border-radius: 20rpx;
 }
 
-.list-header {
+.card-header {
+  margin-bottom: 24rpx;
   font-size: 28rpx;
 }
 .shop-avatar {
@@ -24,96 +24,22 @@
   font-weight: 500;
 }
 
-.goods-list-wrap {
+.list {
   margin-top: 24rpx;
-}
-
-.person-info {
-  display: flex;
-  align-items: center;
-  font-size: 28rpx;
-  color: #333;
-  font-weight: 500;
-}
-.person-name {
-  margin: 0 20rpx;
-}
-.address-info {
-  margin-left: 58rpx;
-  font-size: 28rpx;
-  line-height: 1.2;
   color: #999;
+  font-size: 28rpx;
 }
-.shipping-info {
-  display: flex;
-  align-items: center;
-  margin-top: 30rpx;
-  padding-top: 20rpx;
-  height: 120rpx;
-  border-top: 1rpx solid #f0f0f0;
+.title {
+  color: #333;
 }
-.shipping-tips {
-  margin-left: 20rpx;
+.content {
   flex: 1;
-  font-size: 28rpx;
-  color: #B87900;
+  text-align: right;
 }
 
-.price-detail-wrap {
+.more-info-wrap {
   margin-top: 24rpx;
-}
-.price-detail {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 60rpx;
-  color: #666;
-  font-size: 24rpx;
-}
-.price-detail.total {
-  height: 70rpx;
-  color: #B87900;
-  font-size: 24rpx;
-}
-.total-tips {
-  font-size: 28rpx;
-  color: #333;
-  font-weight: 500;
-}
-
-.more-info {
   border-top: 1px solid #f0f0f0;
-}
-
-.info-wrap-title {
-  font-size: 26rpx;
-  color: #333;
-  font-weight: 500;
-}
-.customer-note {
-  margin-top: 10rpx;
-  font-size: 24rpx;
-  color: #666;
-}
-
-.order-creation {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 60rpx;
-  color: #666;
-  font-size: 24rpx;
-}
-
-.chat-icon {
-  padding: 0;
-  position: fixed;
-  right: 45rpx;
-  bottom: 45rpx;
-  width: 100rpx;
-  height: 100rpx;
-  border-radius: 50%;
-  box-shadow: 0 0 6rpx #333333;
 }
 
 .bottom-bar {
