--- a/pages/mine/suppages/order-list/utils/order.wxs
+++ b/pages/mine/suppages/order-list/utils/order.wxs
@@ -21,7 +21,7 @@ function statusDesc(status) {
 function paymentDesc(status) {
   var desc = '应付款';
   if (status === 101) {
-    paymentDesc = '需付款';
+    desc = '需付款';
   } else if (status === 201 || status === 301 || status === 401 || status === 402) {
     desc = '实付款';
   }
