--- a/utils/filters/time.wxs
+++ b/utils/filters/time.wxs
@@ -1,31 +1,27 @@
-function transform(timeStamp) {
-  return {
-    year: format(getDate(timeStamp * 1000).getFullYear()),
-    month: format(getDate(timeStamp * 1000).getMonth() + 1),
-    date: format(getDate(timeStamp * 1000).getDate()),
-    day: format(getDate(timeStamp * 1000).getDay()),
-    hours: format(getDate(timeStamp * 1000).getHours()),
-    minutes: format(getDate(timeStamp * 1000).getMinutes()),
-    seconds: format(getDate(timeStamp * 1000).getSeconds())
-  };
-}
-
 function format(time) {
   time = time.toString();
   return time[1] ? time : '0' + time;
 }
 
-function countDown(timeStamp, noDays) {
-  var days = format(Math.floor(timeStamp / (24 * 60 * 60))),
-      hours = noDays ? format(Math.floor(timeStamp / (60 * 60))) : format(Math.floor(timeStamp % (24 * 60 * 60) / (60 * 60))),
-      minutes = format(Math.floor(timeStamp % (60 * 60) / 60)),
-      seconds = format(Math.floor(timeStamp % 60))
-  return {
-    days: days < 0 ? '00' : days,
-    hours: hours < 0 ? '00' : hours,
-    minutes: minutes < 0 ? '00' : minutes,
-    seconds: seconds < 0 ? '00' : seconds
-  };
+function transform(timeStamp, statement) {
+  if (timeStamp) {
+    timeStamp = timeStamp.toString().length === 10 ? timeStamp * 1000 : timeStamp
+    var year = getDate(timeStamp).getFullYear()
+    var month = format(getDate(timeStamp).getMonth() + 1)
+    var day = format(getDate(timeStamp).getDate())
+    var hours = format(getDate(timeStamp).getHours())
+    var minutes = format(getDate(timeStamp).getMinutes())
+    var seconds = format(getDate(timeStamp).getSeconds())
+    return statement.replace('YYYY', year).replace('MM', month).replace('DD', day).replace('hh', hours).replace('mm', minutes).replace('ss', seconds)
+  }
+}
+
+function countDown(timeStamp, statement) {
+  var days = format(Math.floor(timeStamp / (24 * 60 * 60)))
+  var hours = format(Math.floor(timeStamp % (24 * 60 * 60) / (60 * 60)))
+  var minutes = format(Math.floor(timeStamp % (60 * 60) / 60))
+  var seconds = format(Math.floor(timeStamp % 60))
+  return statement.replace('dd', days).replace('hh', hours).replace('mm', minutes).replace('ss', seconds)
 }
 
 function getDateDiff(dateTimeStamp) {
@@ -79,10 +75,25 @@ function getTimeDiff(dateTimeStamp) {
   return diffValue;
 }
 
+function calculateDuration(startTimeStamp, statement, endTimeStamp = 0) {
+  if (startTimeStamp) {
+    var diffValue
+    if (endTimeStamp != 0) {
+      diffValue = endTimeStamp - startTimeStamp
+    } else {
+      var now = getDate().getTime();
+      diffValue = (now - startTimeStamp * 1000) / 1000;
+    }
+    
+    return countDown(diffValue, statement)
+  }
+}
+
 module.exports = {
+  format: format,
   transform: transform,
   countDown: countDown,
-  format: format,
   getDateDiff: getDateDiff,
-  getTimeDiff: getTimeDiff
+  getTimeDiff: getTimeDiff,
+  calculateDuration: calculateDuration
 }
