--- a/components/nav-bar/index.wxml
+++ b/components/nav-bar/index.wxml
@@ -1,7 +1,10 @@
-<view class="nav-bar row" style="padding-top: {{statusBarHeight}}px;">
-  <view style="flex: 1;">
-    <back-icon />
+<view class="nav-bar-wrap" style="padding-top: {{statusBarHeight}}px;">
+  <view class="nav-bar row">
+    <view style="flex: 1;">
+      <back-icon custom="{{custom}}" bind:navigateBack="navigateBack" />
+    </view>
+    <view class="title">{{title}}</view>
+    <view style="flex: 1;"></view>
   </view>
-  <view class="title">{{title}}</view>
-  <view style="flex: 1;"></view>
+  <slot></slot>
 </view>
