--- a/pages/mine/suppages/order-list/index.wxml
+++ b/pages/mine/suppages/order-list/index.wxml
@@ -1,12 +1,14 @@
-<view class="menu">
-  <view 
-    class="menu-item {{curMenuIndex === index ? 'selected' : ''}}" 
-    wx:for="{{menuList}}" wx:key="index" 
-    bindtap="selectMenu" data-index="{{index}}"
-  >{{item.name}}</view>
-</view>
+<nav-bar title="我的订单" custom="{{true}}" bind:navigateBack="navigateBack">
+  <view class="menu">
+    <view 
+      class="menu-item {{curMenuIndex === index ? 'selected' : ''}}" 
+      wx:for="{{menuList}}" wx:key="index" 
+      bindtap="selectMenu" data-index="{{index}}"
+    >{{item.name}}</view>
+  </view>
+</nav-bar>
 
-<view class="content">
+<view class="content" style="margin-top: {{statusBarHeight + 84}}px;">
   <order-list list="{{orderList}}" bind:update="updateOrderList"/>
   <empty-illus wx:if="{{finished && !orderList.length}}" desc="暂无订单列表" />
   <view class="no-more-tips" wx:if="{{finished && orderList.length}}">～没有更多了～</view>
