--- a/pages/mine/suppages/order-list/index.wxss
+++ b/pages/mine/suppages/order-list/index.wxss
@@ -1,7 +1,7 @@
 .menu {
-  position: fixed;
+  /* position: fixed;
   top: 0;
-  left: 0;
+  left: 0; */
   display: flex;
   align-items: center;
   width: 100%;
