--- a/pages/mine/suppages/order-list/subpages/order-detail/index.wxml
+++ b/pages/mine/suppages/order-list/subpages/order-detail/index.wxml
@@ -22,7 +22,7 @@
     </view>
     <view class="list row between">
       <view class="title">{{ORDER.paymentDesc(orderInfo.status)}}</view>
-      <price-unit price="{{orderInfo.paymentAmount}}" fontSize="26rpx" integerFontSize="34rpx" />
+      <price-unit price="{{orderInfo.paymentAmount}}" />
     </view>
     <view class="more-info-wrap">
       <view class="list row top">
@@ -34,7 +34,7 @@
         <view>
           <text>{{orderInfo.orderSn}}</text>
           <text>｜</text>
-          <text style="color: #333" bindtap="copyOrderNumber">复制</text>
+          <text style="color: #333" bindtap="copyOrderSn">复制</text>
         </view>
       </view>
       <view class="list row between">
