--- a/pages/mine/suppages/order-list/subpages/order-detail/components/goods-list/index.wxml
+++ b/pages/mine/suppages/order-list/subpages/order-detail/components/goods-list/index.wxml
@@ -1,5 +1,5 @@
 <view class="goods-list">
-  <view class="goods-item" wx:for="{{list}}" wx:key="index" >
+  <view class="goods-item" wx:for="{{list}}" wx:key="index">
     <view class="row" bindtap="navToGoodsDetail" data-id="{{item.goodsId}}">
       <image class="goods-img" src="{{item.image}}" mode="aspectFill" lazy-load />
       <view class="goods-content">
@@ -17,6 +17,7 @@
     <view class="btn-wrap">
       <button 
         class="btn" 
+        wx:if="{{status === 401 || status === 402}}"
         catchtap="afterSale" data-id="{{item.id}}"
       >申请售后</button>
     </view>
