--- a/pages/mine/suppages/order-list/components/order-list/index.wxml
+++ b/pages/mine/suppages/order-list/components/order-list/index.wxml
@@ -12,7 +12,7 @@
       <view class="order-status">{{ORDER.statusDesc(item.status)}}</view>
     </view>
     <view class="list-content">
-      <goods-list list="{{item.goodsList}}" canShowDetail="{{false}}" />
+      <goods-list list="{{item.goodsList}}" />
     </view>
     <view class="list-footer">
       <view class="total-info row baseline">
