--- a/pages/mine/suppages/shop-management/utils/order.wxs
+++ b/pages/mine/suppages/shop-management/utils/order.wxs
@@ -1,11 +1,11 @@
 function statusDesc(status) {
   var desc = '';
   if (status === 101) {
-    desc = '待付款';
+    desc = '等待买家付款';
   } else if (status === 102 || status === 103 || status === 104) {
     desc = '交易关闭';
   } else if (status === 201) {
-    desc = '待发货';
+    desc = '等待卖家发货';
   } else if (status === 202) {
     desc = '退款申请中';
   } else if (status === 203) {
