--- a/pages/mine/suppages/order-list/components/order-list/index.wxml
+++ b/pages/mine/suppages/order-list/components/order-list/index.wxml
@@ -1,4 +1,4 @@
-<wxs module="ORDER" src="../../utils/order.wxs" />
+<wxs module="ORDER" src="../../../../utils/order.wxs" />
 
 <view class="order-list">
   <view class="order-item" wx:for="{{list}}" wx:key="index" catchtap="navToDetail" data-id="{{item.id}}">
@@ -37,22 +37,22 @@
         >取消订单</button>
         <button class="btn" catchtap="navToDetail" data-id="{{item.id}}">查看详情</button>
         <button 
-          class="btn warn" 
+          class="btn active" 
           wx:if="{{item.status === 301}}" 
           catchtap="confirmOrder" data-id="{{item.id}}" data-index="{{index}}"
         >确认收货</button>
         <button 
-          class="btn warn" 
+          class="btn active" 
           wx:if="{{item.status === 101}}" 
           catchtap="payOrder" data-id="{{item.id}}" data-index="{{index}}"
         >继续付款</button>
         <button 
-          class="btn warn" 
+          class="btn active" 
           wx:if="{{item.status === 202}}"
           catchtap="refundOrder" data-id="{{item.id}}" data-index="{{index}}"
         >申请退款</button>
         <button 
-          class="btn warn" 
+          class="btn active" 
           wx:if="{{item.status === 401 || item.status === 402}}" 
           catchtap="navToComment" data-id="{{item.id}}"
         >评价</button>
