--- a/pages/mine/suppages/shop-management/index.wxss
+++ b/pages/mine/suppages/shop-management/index.wxss
@@ -2,10 +2,12 @@
   position: fixed;
   top: 0;
   left: 0;
-  margin-left: 8px;
+  padding-left: 8px;
   height: 44px;
+  width: 100%;
   box-sizing: inherit;
   background: #22242C;
+  z-index: 100;
 }
 
 .header {
