--- a/pages/mine/suppages/order-list/subpages/order-detail/index.wxml
+++ b/pages/mine/suppages/order-list/subpages/order-detail/index.wxml
@@ -74,25 +74,25 @@
     bindtap="cancelOrder" data-id="{{orderInfo.id}}" data-index="{{index}}"
   >取消订单</button>
   <button 
-    class="btn warn" 
+    class="btn active"
     wx:if="{{orderInfo.status === 301}}" 
     bindtap="confirmOrder" data-id="{{orderInfo.id}}" data-index="{{index}}"
   >确认收货</button>
   <button 
-    class="btn warn" 
+    class="btn active" 
     wx:if="{{orderInfo.status === 101}}" 
     bindtap="payOrder" data-id="{{orderInfo.id}}" data-index="{{index}}"
   >继续付款</button>
   <button 
-    class="btn warn" 
+    class="btn active" 
     wx:if="{{orderInfo.status === 202}}"
     bindtap="refundOrder" data-id="{{orderInfo.id}}" data-index="{{index}}"
   >申请退款</button>
   <button 
-    class="btn warn" 
+    class="btn active" 
     wx:if="{{orderInfo.status === 401 || orderInfo.status === 402}}" 
     bindtap="navToComment" data-id="{{orderInfo.id}}"
   >评价</button>
-  <button class="btn warn" bindtap="contact">{{orderInfo.shopId ? '联系卖家' : '联系客服'}}</button>
+  <button class="btn active" bindtap="contact">{{orderInfo.shopId ? '联系卖家' : '联系客服'}}</button>
 </view>
   
