--- a/pages/mine/suppages/shop-management/components/order-list/index.wxml
+++ b/pages/mine/suppages/shop-management/components/order-list/index.wxml
@@ -3,7 +3,7 @@
 <view class="order-list">
   <view class="order-item" wx:for="{{list}}" wx:key="index" catchtap="navToDetail" data-id="{{item.id}}">
     <view class="list-header row between">
-      <view class="contact-btn row" catchtap="contactBuyer">
+      <view class="contact-btn row" catchtap="contact">
         <view>联系买家</view>
         <image style="width: 20rpx; height: 20rpx;" src="https://img.ubo.vip/mp/to-icon.png" />
       </view>
