--- a/pages/mine/suppages/shop-management/subpages/order-detail/index.wxss
+++ b/pages/mine/suppages/shop-management/subpages/order-detail/index.wxss
@@ -12,14 +12,7 @@
   margin-bottom: 24rpx;
   font-size: 28rpx;
 }
-.shop-avatar {
-  margin-right: 16rpx;
-  width: 40rpx;
-  height: 40rpx;
-  border-radius: 50%;
-}
-.shop-name {
-  flex: 1;
+.contact-btn {
   color: #333;
   font-weight: 500;
 }
@@ -53,17 +46,17 @@
   background: #fff;
 }
 .btn {
-  margin-left: 16rpx;
+  margin-right: 16rpx;
   width: 160rpx;
   height: 56rpx;
   line-height: 54rpx;
   text-align: center;
   font-size: 28rpx;
-  color: #666;
+  color: #3979BE;
   border-radius: 28rpx;
-  border: 1rpx solid #D8D8D8;
+  border: 1rpx solid #3979BE;
 }
-.btn.warn {
-  color: #161F4E;
-  border: 1rpx solid #161F4E;
+.btn.active {
+  color: #fff;
+  background: #3979BE;
 }
