--- a/pages/mine/suppages/shop-management/components/order-list/index.wxml
+++ b/pages/mine/suppages/shop-management/components/order-list/index.wxml
@@ -17,6 +17,18 @@
         <view>{{ORDER.paymentDesc(item.status)}}：</view>
         <price-unit price="{{item.paymentAmount}}" color="#333" fontSize="26rpx" integerFontSize="36rpx" />
       </view>
+      <view class="deliver-info-wrap" wx:if="{{item.status === 201}}">
+        <view class="deliver-info row" catchtap="copyOrderSn" data-sn="{{item.orderSn}}">
+          <image class="order-icon" src="./images/order.png" />
+          <view class="order-sn">订单编号 {{item.orderSn}}</view>
+          <image class="copy-icon" src="./images/copy.png" />
+        </view>
+        <view class="deliver-info row top" catchtap="copyAddress" data-address="{{item.consignee}}，{{item.mobile}}，{{item.address}}">
+          <image class="address-icon" src="./images/address.png" />
+          <view class="address-detail">{{item.consignee}}，{{item.mobile}}，{{item.address}}</view>
+          <image class="copy-icon" src="./images/copy.png" />
+        </view>
+      </view>
       <view class="btn-wrap">
         <button
           class="btn" 
