--- a/pages/mine/suppages/shop-management/index.wxml
+++ b/pages/mine/suppages/shop-management/index.wxml
@@ -1,7 +1,7 @@
 <view class="nav-bar row" style="padding-top: {{statusBarHeight}}px">
   <back-icon noBorder />
   <view class="search-bar row between" bindtap="search">
-    <text class="placeholder">点击搜索订单</text>
+    <text class="placeholder">搜索订单</text>
     <image class="search-icon" src="/images/search.png" />
   </view>
 </view>
@@ -73,14 +73,15 @@
   </view>
 </view>
 
-<view class="menu-wrap">
+<view class="menu-wrap {{ menuFixed ? 'fixed' : '' }}" style="top: {{statusBarHeight + 44}}px;">
   <view 
     class="menu-item {{curMenuIndex === index ? 'selected' : ''}} row center" 
     wx:for="{{menuList}}" wx:key="index" 
     bindtap="selectMenu" data-index="{{index}}"
   >{{item.name}}</view>
 </view>
-<view class="order-list-wrap">
+
+<view class="order-list-wrap {{ menuFixed ? 'fixed' : '' }}">
   <order-list list="{{orderList}}" bind:update="updateOrderList" />
   <empty-illus wx:if="{{finished && !orderList.length}}" desc="暂无订单列表" />
   <view class="no-more-tips" wx:if="{{finished && orderList.length}}">～没有更多了～</view>
