--- a/pages/mine/suppages/shop-management/index.wxss
+++ b/pages/mine/suppages/shop-management/index.wxss
@@ -185,6 +185,11 @@
   height: 40px;
   background: #fff;
   border-top: 1px solid #f5f6f8;
+  box-shadow: 0 2px 20px -2px #f0f0f0;
+}
+.menu-wrap.fixed {
+  position: fixed;
+  left: 0;
 }
 .menu-item {
   flex: 1;
@@ -213,6 +218,9 @@
 
 .order-list-wrap {
   padding: 24rpx;
+}
+.order-list-wrap.fixed {
+  margin-top: 40px;
 }
 
 .no-more-tips {
