--- a/pages/mine/suppages/shop-management/index.wxml
+++ b/pages/mine/suppages/shop-management/index.wxml
@@ -6,7 +6,7 @@
   </view>
 </view>
 
-<view class="header" style="padding-top: {{statusBarHeight + 56}}px">
+<view class="header" style="margin-top: {{statusBarHeight + 44}}px">
   <view class="shop-info-wrap row">
     <view class="avatar-wrap">
       <image class="shop-avatar" src="{{shopInfo.avatar}}" />
@@ -53,19 +53,19 @@
       <view class="btn-title">店铺管理</view>
     </view>
     <view class="btn">
-      <view class="btn-icon-wrap">
+      <view class="btn-icon-wrap" bindtap="navToGoodsManagement">
         <image class="btn-icon" src="./images/goods.png" />
       </view>
       <view class="btn-title">商品管理</view>
     </view>
     <view class="btn">
-      <view class="btn-icon-wrap">
+      <view class="btn-icon-wrap" bindtap="navToReturnAddressManagement">
         <image class="btn-icon" src="./images/address.png" />
       </view>
       <view class="btn-title">寄回地址</view>
     </view>
     <view class="btn">
-      <view class="btn-icon-wrap">
+      <view class="btn-icon-wrap" bindtap="navToFreightTemplateManagement">
         <image class="btn-icon" src="./images/freight.png" />
       </view>
       <view class="btn-title">运费模板</view>
