--- a/pages/mine/suppages/live-management/live-notice/index.wxml
+++ b/pages/mine/suppages/live-management/live-notice/index.wxml
@@ -1,1 +1,29 @@
-  
+<wxs module="TIME" src="/utils/filters/time.wxs" />
+
+<view class="container">
+  <image class="bg" src="{{roomInfo.cover}}" />
+
+  <view class="nav-bar row" style="margin-top: {{statusBarHeight}}px;">
+    <view class="nav-bar-btn row">
+      <image class="nav-back-icon" bindtap="navBack" src="https://img.ubo.vip/mp/i-back-icon/back-icon.png" />
+      <image class="share-icon" bindtap="navBack" src="https://img.ubo.vip/mp/i-back-icon/back-icon.png" />
+    </view>
+  </view>
+
+  <view class="cover-wrap">
+    <image class="cover" src="{{roomInfo.cover}}" mode="aspectFill" />
+    <view class="tag row center">预告</view>
+  </view>
+
+  <view class="title omit single-line">{{roomInfo.title}}</view>
+
+  <view class="time-wrap">
+    <view>开始时间：{{TIME.transform(roomInfo.noticeTime, 'YYYY-MM-DD hh:mm')}}</view>
+    <view>倒计时：{{TIME.countDown(countDown, 'dd天hh时mm分ss秒')}}</view>
+  </view>
+
+  <view class="btn-wrap row between">
+    <button class="delete-btn" bindtap="deleteLive">删除预告</button>
+    <button class="start-btn" bindtap="startLive">开始直播</button>
+  </view>
+</view>
