--- a/pages/mine/suppages/live-management/live-notice/index.wxml
+++ b/pages/mine/suppages/live-management/live-notice/index.wxml
@@ -4,9 +4,9 @@
   <image class="bg" src="{{roomInfo.cover}}" />
 
   <view class="nav-bar row" style="margin-top: {{statusBarHeight}}px;">
-    <view class="nav-bar-btn row">
+    <view class="nav-bar-btn row between">
       <image class="nav-back-icon" bindtap="navBack" src="https://img.ubo.vip/mp/i-back-icon/back-icon.png" />
-      <image class="share-icon" bindtap="navBack" src="https://img.ubo.vip/mp/i-back-icon/back-icon.png" />
+      <image class="share-icon" bindtap="navBack" src="./images/share.png" />
     </view>
   </view>
 
