--- a/pages/mine/suppages/live-management/live-notice/index.wxss
+++ b/pages/mine/suppages/live-management/live-notice/index.wxss
@@ -22,11 +22,11 @@
 }
 .nav-bar-btn {
   position: relative;
-  width: 100px;
+  width: 86px;
   height: 32px;
   border-radius: 16px;
-  background: rgba(0, 0, 0, 0.3);
-  border: 0.5px solid rgba(255,255,255,0.3);
+  background: rgba(0, 0, 0, 0.18);
+  border: 0.5px solid rgba(255, 255, 255, 0.3);
 }
 .nav-bar-btn::after {
   position: absolute;
@@ -35,12 +35,18 @@
   transform: translate(-50%, -50%);
   content: '';
   width: 0.5px;
-  height: 28px;
-  background: rgba(255,255,255,0.3);
+  height: 18px;
+  background: #fff;
 }
-.nav-back-icon, .share-icon {
+.nav-back-icon {
+  margin-left: 10px;
   width: 20px;
   height: 20px;
+}
+.share-icon {
+  margin-right: 13px;
+  width: 18px;
+  height: 18px;
 }
 
 .cover-wrap {
