--- a/components/i-poster-modal/index.wxml
+++ b/components/i-poster-modal/index.wxml
@@ -1,4 +1,4 @@
 <view class="poster-modal {{(show && !authModalVisible) ? 'show' : ''}}">
   <canvas class="poster" canvas-id="poster" />
-  <button class="save-btn" bindtap='save'>↓ 保存海报</button>
+  <button class="save-btn" bindtap='save' hover-class="none">↓ 保存海报</button>
 </view>
