--- a/pages/mine/suppages/live-management/live-notice/index.wxss
+++ b/pages/mine/suppages/live-management/live-notice/index.wxss
@@ -2,18 +2,19 @@
   position: fixed;
   top: 0;
   left: 0;
-  right: 0;
-  bottom: 0;
+  width: 100vw;
+  height: 100vh;
 }
 
 .bg {
   position: absolute;
   top: 0;
   left: 0;
-  right: 0;
-  bottom: 0;
+  width: 100%;
+  height: 100%;
   filter: blur(20px);
-  zoom: 1.2;
+  transform: scale(1.2);
+  z-index: -1;
 }
 
 .nav-bar {
@@ -54,7 +55,7 @@
   margin: 120rpx auto 0;
   width: 440rpx;
   height: 440rpx;
-  border-radius: 24rpx;
+  border-radius: 18rpx;
   overflow: hidden;
 }
 .tag {
@@ -70,10 +71,11 @@
 }
 
 .title {
-  margin: 32rpx auto 0;
+  margin: 32rpx;
   color: #fff;
   font-size: 36rpx;
   font-weight: bold;
+  text-align: center;
 }
 
 .time-wrap {
@@ -93,13 +95,20 @@
   left: 0;
   bottom: 0;
   padding: 0 24rpx calc(24rpx + env(safe-area-inset-bottom));
+  width: 100%;
 }
 
+.delete-btn, .start-btn {
+  width: 340rpx;
+  height: 80rpx;
+  font-size: 28rpx;
+  border-radius: 40rpx;
+}
 .delete-btn {
-  width: 260rpx;
-  height: 88rpx;
+  color: #f68686;
+  border: 1rpx solid #f68686;
+}
+.start-btn {
   color: #fff;
-  font-size: 32rpx;
-  border-radius: 44rpx;
   border: 1rpx solid #fff;
 }
