--- a/components/live/i-anchor-capsule/index.wxml
+++ b/components/live/i-anchor-capsule/index.wxml
@@ -1,8 +1,6 @@
-<wxs module="NUM" src="/utils/filters/num.wxs" />
-<wxs module="STRING" src="/utils/filters/string.wxs" />
 
 <view class="anchor-capsule">
   <image class="anchor-avatar" src="{{roomInfo.studio_head_img}}" />
-  <view class="anchor-name">{{roomInfo.studio_title && STRING.slice(roomInfo.studio_title, 10)}}</view>
+  <view class="anchor-name omit single-line">{{roomInfo.studio_title}}</view>
   <view class="follow-icon" wx:if="{{roomType == 2}}" catchtap="follow">{{isFollow ? '订阅' : '关注'}}</view>
 </view>
