--- a/pages/mine/suppages/live-management/create-live/index.wxml
+++ b/pages/mine/suppages/live-management/create-live/index.wxml
@@ -25,14 +25,30 @@
       <image wx:if="{{!uploadShareCoverLoading && shareCover}}" style="width: 100%; height: 100%;" src="{{shareCover}}" />
     </view>
   </view>
+
+  <view class="card">
+    <view class="title">直播分辨率</view>
+    <view class="resolution-selections row between">
+      <view 
+        class="resolution-selection {{curResolutionIdx === index ? 'active' : ''}}" 
+        wx:for="{{resolutionList}}"
+        wx:key="index"
+        bindtap="selectResolution"
+        data-index="{{index}}"
+        >
+        <view class="resolution-name">{{item.name}}</view>
+        <view class="resolution-detail">{{item.detail}}</view>
+      </view>
+    </view>
+  </view>
   
   <view class="card" style="padding-top: 0; padding-bottom: 0;">
     <view class="list row">
-      <view class="list-title">直播标题</view>
+      <view class="title">直播标题</view>
       <input class="list-input" value="{{title}}" bindinput="setTitle" placeholder="请输入直播标题" />
     </view>
     <view class="list row between">
-      <view class="list-title">展示方式</view>
+      <view class="title">展示方式</view>
       <view class="list-seletion row">
         <view class="selection-item row" wx:for="{{['竖屏', '横屏']}}" wx:key="index" bindtap="selectDirection" data-direction="{{index + 1}}">
           <image class="selection-icon" src="https://img.ubo.vip/mp/sass/create-live/{{direction === (index + 1) ? 'selected' : 'unselected'}}.png" />
@@ -41,7 +57,7 @@
       </view>
     </view>
     <view class="list row between" wx:if="{{userInfo.shopId}}">
-      <view class="list-title">添加商品</view>
+      <view class="title">添加商品</view>
       <view class="list-picker row" bindtap="selectGoods">
         <text>{{pickedGoodsIds.length ? ('已选' + pickedGoodsIds.length + '件商品') : '请选择商品'}}</text>
         <image class="arrow" src="https://img.ubo.vip/mp/sass/mine/gray-arrow.png" />
@@ -51,11 +67,11 @@
 
   <view class="card" style="padding-top: 0; padding-bottom: 0;">
     <view class="list row between">
-      <view class="list-title row">创建预告</view>
+      <view class="title row">创建预告</view>
       <switch class="list-switch" color="#0095fa" bindchange="toggleIsNotice" />
     </view>
     <view class="list row between" wx:if="{{isNotice}}">
-      <view class="list-title row">预告时间</view>
+      <view class="title row">预告时间</view>
       <date-picker value="{{noticeTimeString}}" bind:change="setNoticeTime">
         <view class="list-picker row">
           <text>{{ noticeTimeString || '选择时间' }}</text>
