--- a/pages/mine/suppages/live-management/create-live/index.wxss
+++ b/pages/mine/suppages/live-management/create-live/index.wxss
@@ -1,11 +1,17 @@
 .container {
   padding: 24rpx 24rpx calc(124rpx + env(safe-area-inset-bottom));
 }
+
 .card {
   margin-bottom: 24rpx;
   padding: 24rpx;
+  font-size: 28rpx;
   background: #fff;
   border-radius: 16rpx;
+}
+.title {
+  color: #333;
+  font-weight: bold;
 }
 
 .cover-uploader, .share-cover-uploader {
@@ -53,20 +59,42 @@
   }
 }
 
+
+.resolution-selections {
+  margin-top: 20rpx;
+}
+.resolution-selection {
+  width: 204rpx;
+  height: 100rpx;
+  color: #999;
+  text-align: center;
+  background: #F5F6F7;
+  border-radius: 8rpx;
+}
+.resolution-selection.active {
+  position: relative;
+  color: #fff;
+  background: linear-gradient(128deg, #53678d 0%, #161F4E 100%);
+}
+.resolution-name {
+  margin-top: 16rpx;
+  font-size: 24rpx;
+  font-weight: bold;
+}
+.resolution-detail {
+  margin-top: 6rpx;
+  font-size: 20rpx;
+}
+
 .list {
   height: 110rpx;
-  font-size: 28rpx;
   border-bottom: 1px solid #F5F6F7;
 }
 .list:last-child {
   border-bottom: none;
 }
-.list-title {
-  margin-right: 30rpx;
-  color: #333;
-  font-weight: bold;
-}
 .list-input {
+  margin-left: 30rpx;
   flex: 1;
   text-align: right;
 }
